UI Component docs (Display & Feedback components) (#2453)
* ui docs

* UI docs for display components

* docs for display and feedback components

* minor edits

* minor changes

* cleaned up code

* Move telemetry

* Revised Feedback/Display UI docs & added input UI docs

* Docs for Input components

* updated icons

* docs for input/components

* minor edits based on feedback

* add css to ui components

* Fixed spacing issue in button groups

---------

Co-authored-by: Félix Malfait <felix.malfait@gmail.com>
Co-authored-by: Charles Bochet <charles@twenty.com>

--- a/docs/docs/contributor/frontend/ui-components/ui-components.mdx
+++ b/docs/docs/contributor/frontend/ui-components/ui-components.mdx
@@ -1,4 +1,8 @@
 ---
-title: Overview
+title: UI Components 
 sidebar_position: 0
+displayed_sidebar: uiDocsSidebar
+sidebar_custom_props:
+  isSidebarRoot: true
+  icon: TbLayoutGrid
 ---
