--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -6,6 +6,7 @@ title: Welcome
 custom_edit_url: null
 ---
 import ThemedImage from '@theme/ThemedImage';
+import Footer from '@theme/Footer'
 
 Twenty is an Open Source CRM that provides flexibility, tailored to your business needs. It helps you break free from vendor lock-in and limitations, and provides the tools you need to harness the full potential of your data while ensuring a sleek and effortlessly intuitive design that teams will love to use.  
 <ThemedImage sources={{light: "../img/light-doc-preview.png", dark:"../img/dark-doc-preview.png"}} style={{width:'100%', maxWidth:'800px'}}/>
@@ -33,3 +34,5 @@ Code contributions through pull request are most welcome. See the [local setup g
 
 You can also contribute by creating an issue to report a bug you've spotted, joining discussions or writing documentation.
 
+
+<Footer/>
