--- a/docs/docs/start/bug-and-requests.mdx
+++ b/docs/docs/start/bug-and-requests.mdx
@@ -8,6 +8,8 @@ sidebar_custom_props:
 ## Reporting Bugs
 To report a bug, please [create an issue on GitHub](https://github.com/twentyhq/twenty/issues/new).
 
+You can also ask for help on [Discord](https://twenty.com/discord).
+
 ## Feature Requests
 
 If you're not sure it's a bug and you feel it's closer to a feature request, then you should probably [open a discussion instead](https://github.com/twentyhq/twenty/discussions/new).
