Fix UI components (#2771)
* fixes radio button's label (issue #2566)

* fixes entity title double text input's width (issue #2562)

* fixed checkmark placement on color scheme card

* fix failing CI Docs

* fixes computed node dimensions and color scheme card

* fix color scheme card background

* fix color scheme card background

* updated color scheme card docs

* Fix

---------

Co-authored-by: Charles Bochet <charles@twenty.com>

--- a/docs/docs/contributor/frontend/ui-components/input/color-scheme.mdx
+++ b/docs/docs/contributor/frontend/ui-components/input/color-scheme.mdx
@@ -42,7 +42,7 @@ Represents different color schemes and is specially tailored for light and dark 
     <tr>
       <td>variant</td>
       <td>string</td>
-      <td>The color scheme variant. Options include `dark`, `light`, and `system`</td>
+      <td>The color scheme variant. Options include `Dark`, `Light`, and `System`</td>
       <td>light</td>
     </tr>
 
