--- a/docs/docs/contributor/frontend/ui-components/input/text-input.mdx
+++ b/docs/docs/contributor/frontend/ui-components/input/text-input.mdx
@@ -8,7 +8,7 @@ sidebar_custom_props:
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import { SandpackEditor} from '@site/src/ui/SandpackEditor'
-import autoSizeTextInputCode from '!!raw-loader!@site/src/ui/input/components/autoSizeTextInputCode.js'
+import autosizeTextInputCode from '!!raw-loader!@site/src/ui/input/components/autosizeTextInputCode.js'
 import entityTitleDoubleTextInputCode from '!!raw-loader!@site/src/ui/input/components/entityTitleDoubleTextInputCode.js'
 
 
@@ -21,7 +21,7 @@ Text input component that automatically adjusts its height based on the content.
 
 <SandpackEditor
   availableComponentPaths={['@/ui/input/components/AutosizeTextInput']}
-  componentCode={autoSizeTextInputCode} 
+  componentCode={autosizeTextInputCode} 
 />
 
 </TabItem>
