add message queue integration (#2491)

--- a/docs/docs/start/self-hosting/enviroment-variables.mdx
+++ b/docs/docs/start/self-hosting/enviroment-variables.mdx
@@ -24,6 +24,8 @@ import OptionTable from '@site/src/theme/OptionTable'
 
 <OptionTable options={[
     ['PG_DATABASE_URL', 'postgres://user:pw@localhost:5432/default?connection_limit=1', 'Database connection'],
+    ['REDIS_HOST', '127.0.0.1', 'Redis connection host'],
+    ['REDIS_PORT', '6379', 'Redis connection port'],
     ['FRONT_BASE_URL', 'http://localhost:3001', 'Url to the hosted frontend'],
     ['PORT', '3000', 'Port'],
     ]}></OptionTable>
@@ -59,6 +61,12 @@ import OptionTable from '@site/src/theme/OptionTable'
     ['STORAGE_S3_NAME', '', 'Bucket Name'],
     ['STORAGE_S3_ENDPOINT', '', 'Use if a different Endpoint is needed (for example Google)'],
     ['STORAGE_LOCAL_PATH', '.local-storage', 'data path (local storage)'],
+    ]}></OptionTable>
+
+### Message Queue
+
+<OptionTable options={[
+    ['MESSAGE_QUEUE_TYPE', 'pg-boss', "Queue driver: 'pg-boss' or 'bull-mq'"],
     ]}></OptionTable>
 
 ### Logging
