Throw an error if workspace id has no object (#2857)
* Throw an error if workspace id has no object

* Request only plurial object names

* Fix tests

* Fix query

* Handle graphql errors

--- a/docs/docs/start/self-hosting/enviroment-variables.mdx
+++ b/docs/docs/start/self-hosting/enviroment-variables.mdx
@@ -27,6 +27,7 @@ import OptionTable from '@site/src/theme/OptionTable'
     ['REDIS_HOST', '127.0.0.1', 'Redis connection host'],
     ['REDIS_PORT', '6379', 'Redis connection port'],
     ['FRONT_BASE_URL', 'http://localhost:3001', 'Url to the hosted frontend'],
+    ['SERVER_URL', 'http://localhost:3000', 'Url to the hosted server'],
     ['PORT', '3000', 'Port'],
     ]}></OptionTable>
 
