--- a/packages/twenty-docs/docs/contributor/local-setup/local-setup.mdx
+++ b/packages/twenty-docs/docs/contributor/local-setup/local-setup.mdx
@@ -33,10 +33,11 @@ Windows users can install the project through WSL2. [This guide](/contributor/lo
 The repository has the following structure:
 ```
 twenty
-└───docs // contains this documentation
-└───front // contains the frontend code for the application
-└───server // contains the backend code for the application
-└───infra // contains docker configurations for development and production deployments
+└───packages // contains this documentation
+└───twenty-front // contains the frontend code for the application
+└───twenty-server // contains the backend code for the application
+└───twenty-docker // contains docker configurations for development and production build
+└───many other packages your are invited to discover such as twenty-docs, twenty-ui, twenty-eslint-plugin, twenty-zapier...
 ```
 
 ## IDE Setup
