[Wip] Update CI CD (#2945)
* Update CI and CD scripts

* Fix docker docs build

* Fix CD

* Fix CD

* Update front build and add postgres intel pg_graphql files

* Fix postgres install

* Fix

* Update docs

--- a/packages/twenty-docs/docs/contributor/local-setup/docker-setup.mdx
+++ b/packages/twenty-docs/docs/contributor/local-setup/docker-setup.mdx
@@ -92,6 +92,7 @@ make docker-dev-up
 Setup database, run migrations, and seed:
 ```bash
 make docker-dev-sh
+yarn
 yarn nx database:init twenty-server
 ```
 
@@ -104,6 +105,7 @@ make docker-dev-sh
 yarn nx start:dev twenty-server
 ```
 
+and in a separate terminal:
 ```bash
 make docker-dev-sh
 yarn nx start twenty-front
