--- a/packages/twenty-docs/docs/developer/rest_api.mdx
+++ b/packages/twenty-docs/docs/developer/rest_api.mdx
@@ -1,9 +1,30 @@
 ---
-title: Rest API
+title: REST API
 sidebar_position: 3
-sidebar_class_name: coming-soon
 sidebar_custom_props:
   icon: TbApi
 ---
 
-Coming soon!
+To use the REST API, you will need an API key.
+Connect to your Twenty account and follow the following
+[documentation](user-guide/integrations/generating-api-keys.mdx) to generate one
+
+## Using Postman?
+
+You can use [Postman](https://www.postman.com/) to interact with your Twenty objects using the API.
+You will need to provide your API key as a Bearer token,
+see [Bearer Token Postman Doc](https://learning.postman.com/docs/sending-requests/authorization/authorization-types/#bearer-token)
+if needed.
+
+## Programmatic use?
+
+You can call the REST API in your application using this endpoint
+[https://api.twenty.com](https://api.twenty.com).
+You will need to provide your API key as a Bearer token in
+your `headers.Authorization = 'Bearer <YOUR_API_KEY>'`.
+
+## Try the REST API Playground
+
+You can use the browser-based, interactive
+[REST API playground documentation](https://docs.twenty.com/rest-api)
+to Create, Read, Update or Delete your workspace objects.
