--- a/packages/twenty-docs/docs/user-guide/integrations/connect-zapier.mdx
+++ b/packages/twenty-docs/docs/user-guide/integrations/connect-zapier.mdx
@@ -17,7 +17,7 @@ Sync Twenty with 3000+ apps using [Zapier](https://zapier.com/), and automate yo
 2. Click on `+ Create Zap` in the left sidebar. 
 3. Choose the application you want to set as the trigger. A trigger refers to an event that starts the automation. 
 4. Select Twenty as the action. An action is the event performed whenever an application triggers an automation. [Learn more about triggers and actions in Zapier.](https://zapier.com/how-it-works)
-5. Once you choose the Twenty account that you want to use for your automation, you'll have to authorize it by adding an API key. You can learn [how to generate your API key here.](generating-api-keys.mdx)
+5. Once you choose the Twenty account that you want to use for your automation, you'll have to authorize it by adding an API key. You can learn [how to generate your API key here.](user-guide/integrations/generating-api-keys.mdx)
 6. Enter your API key and click on 'Yes, Continue to Twenty.'
 
 <div style={{textAlign: 'center'}}>
