--- a/packages/twenty-docs/docs/user-guide/others/glossary.mdx
+++ b/packages/twenty-docs/docs/user-guide/others/glossary.mdx
@@ -15,6 +15,9 @@ A `Pipeline` is a way to track a business process. Pipelines are present within 
 - A **module** contains the logic for a certain business process (for example: sales, recruiting).
 - **Stages** map the steps in your process (for example: new, ongoing, won, lost).
 
+### Views 
+With views, you can customize how your records are displayed. You can have different filters and sort settings for each view. 
+
 ### Workspace
-A `Workspace` typically represents a company using Twenty.  
+A `Workspace` typically represents a company using Twenty. It holds all the records and data that you and your team members add to Twenty.   
 It has a single domain name, which is typically the domain name your company uses for employee email addresses.
