--- a/packages/twenty-docs/docs/user-guide/user-guide.mdx
+++ b/packages/twenty-docs/docs/user-guide/user-guide.mdx
@@ -8,11 +8,11 @@ sidebar_custom_props:
   isSidebarRoot: true
 ---
 
+import ThemedImage from '@theme/ThemedImage';
+
 # Welcome to Twenty's User Guide
 
 The purpose of this user guide is to help you learn how you can use Twenty to build the CRM you want. 
-
-This quick-start guide walks you through the basics.
 
 ## Quick Search 
 
@@ -22,7 +22,7 @@ The command bar also supports other shortcuts for navigation.
 
 ## Create Pre-filtered Views 
 
-Twenty allows you to add filters to see data that meets certain criteria and hides the rest. 
+Twenty allows you to add filters to see data that meets certain criteria and hides the rest. You can apply multiple filters at once.
 
 To create a filter in your workspace, click Filter at the top right and select the attribute you'd like to filter your records by. Create your filter and then save changes in a new view by clicking `+ Create view`. 
 
@@ -32,6 +32,30 @@ The filtered view is now available to your whole team.
 
 You can also add more stages to the opportunities board. 
 
-On the Opportunities page, click on Options, Stages, then `+ Add Stage`.
+On the <b>Opportunities</b> page, click on <b>Options</b>, <b>Stages</b>, then `+ Add Stage`.
 
 You can also edit the stage by clicking on the name. 
+
+## Create Notes and Tasks For Each Record
+
+You can attach notes and tasks to each record. With Notes, you can keep a record of any observations, comments, and interactions, and keep track of all items that require action with Tasks. 
+
+There are multiple ways to create notes and tasks. Learn more about [Notes](./basics/notes.mdx) and [Tasks](./basics/tasks.mdx). 
+
+## Upload Files For Each Record 
+
+You can also upload and attach files for each record. To do so, expand a record, and head over to the <b>Files</b> tab. You'll then see the `+ Add file` button. 
+
+<ThemedImage sources={{light: "../img/user-guide/attach-files-to-records-light.png", dark:"../img/user-guide/attach-files-to-records-dark.png"}} style={{width:'100%', maxWidth:'800px'}}/>
+
+## Add Records To Favorites
+
+You can add records to your favorites for quick access. To do so, expand the record you want to add, and click on the heart icon on the top right. You'll now be able to see your favorite records in your sidebar right above your workspace. 
+
+<ThemedImage sources={{light: "../img/user-guide/view-favorite-records-light.png", dark:"../img/user-guide/view-favorite-records-dark.png"}} style={{width:'100%', maxWidth:'800px'}}/>
+
+## Import data
+
+You can easily import People and Companies data into Twenty from other apps using a .csv, .xslx, or .xsl file. In the <b>Companies</b> or <b>People</b> page, click on <b>Options</b> and then on <b>Import</b>. 
+
+Upload your file, match the columns, and validate the data to import it. 
