Marketing website improvements (#3169)
* Website improvement

* Improve website design

* Start writing script for user guide

* Begin adding user guide

--- a/packages/twenty-docs/docs/developer/rest_api.mdx
+++ b/packages/twenty-docs/docs/developer/rest_api.mdx
@@ -6,8 +6,7 @@ sidebar_custom_props:
 ---
 
 To use the REST API, you will need an API key.
-Connect to your Twenty account and follow the following
-[documentation](user-guide/integrations/generating-api-keys.mdx) to generate one
+Connect to your Twenty account ang do to Setting > Developers to generate one.
 
 ## Using Postman?
 
