--- a/packages/twenty-website/src/content/user-guide/basics/custom-objects.mdx
+++ b/packages/twenty-website/src/content/user-guide/basics/custom-objects.mdx
@@ -1,11 +1,10 @@
 ---
-title: Creating Custom Objects
+title: Custom Objects
 sidebar_position: 1
 sidebar_custom_props:
   icon: TbAugmentedReality
 ---
 
-import ThemedImage from '@theme/ThemedImage';
 
 Objects are structures that allow you to store data (records, attributes, and values) specific to an organization. Twenty provides both standard and custom objects.
 
@@ -22,7 +21,7 @@ To create a new custom object:
 <br/>
 
 
-<ThemedImage sources={{light: "/img/user-guide/view-all-objects-light.png", dark:"/img/user-guide/view-all-objects-dark.png"}} style={{width:'100%', maxWidth:'800px'}}/>
+<img src="/images/user-guide/view-all-objects-light.png" style={{width:'100%', maxWidth:'800px'}}/>
 
 <br/>
 
@@ -31,7 +30,7 @@ To create a new custom object:
 <br/>
 
 <div style={{textAlign: 'center'}}>
-    <img src="/img/user-guide/create-custom-object.gif" alt="Create custom object" />
+    <img src="/images/user-guide/create-custom-object.gif" alt="Create custom object" />
 </div>
 
 <br/>
@@ -39,5 +38,5 @@ To create a new custom object:
 4. Once you create your custom object, you'll be able to manage it. You can edit the name, icon and description, view the different fields, and add more fields.
 
 <div style={{textAlign: 'center'}}>
-    <img src="/img/user-guide/manage-custom-object.png" alt="Create custom object" />
+    <img src="/images/user-guide/manage-custom-object.png" alt="Create custom object" />
 </div>
