--- a/packages/twenty-website/src/content/user-guide/basics/notes.mdx
+++ b/packages/twenty-website/src/content/user-guide/basics/notes.mdx
@@ -5,7 +5,7 @@ sidebar_custom_props:
   icon: TbNote
 ---
 
-import ThemedImage from '@theme/ThemedImage';
+import PostImage from '@theme/PostImage';
 
 Easily create a note to keep track of important information. 
 
@@ -13,7 +13,7 @@ Easily create a note to keep track of important information.
 
 To attach a note to the record, go to the <b>Notes</b> tab of a record page and click on `+ New Note`. You can also format, comment, and upload images to your notes.   
 
-<ThemedImage sources={{light: "/img/user-guide/create-new-note-light.png", dark:"/img/user-guide/create-new-note-dark.png"}} style={{width:'100%', maxWidth:'800px'}}/>
+<img src="images/user-guide/create-new-note-light.png" style={{width:'100%', maxWidth:'800px'}}/>
 
 ## Format Notes 
 
