--- a/packages/twenty-website/src/content/user-guide/basics/opportunities.mdx
+++ b/packages/twenty-website/src/content/user-guide/basics/opportunities.mdx
@@ -5,11 +5,11 @@ sidebar_custom_props:
   icon: TbTargetArrow
 ---
 
-import ThemedImage from '@theme/ThemedImage';
+import PostImage from '@theme/PostImage';
 
 All opportunities are presented in a Kanban board, where each column represents the stage of your workflow and each card represents a record. For each card, you can list the amount, close date, probability, and the point of contact. You can also move each card between stages as it goes through your workflow. 
 
-<ThemedImage sources={{light: "/img/user-guide/all-opportunities-light.png", dark:"/img/user-guide/all-opportunities-dark.png"}} style={{width:'100%', maxWidth:'800px'}}/>
+<img src="/images/user-guide/all-opportunities-light.png" style={{width:'100%', maxWidth:'800px'}}/>
 
 ## Add and delete stages
 
@@ -26,7 +26,7 @@ It's easy to add filters and update your view to focus on only the most importan
 - You can also add another filter by following the same steps or clicking on the `+ Add filter` button on top of the columns. 
 - To remove a filter condition, simply click on the <b>X</b> next to the attribute you used to filter the records. 
 
-<ThemedImage sources={{light: "/img/user-guide/filter-opportunities-light.png", dark:"/img/user-guide/filter-opportunities-dark.png"}} style={{width:'100%', maxWidth:'800px'}}/>
+<img src="/images/user-guide/filter-opportunities-light.png" style={{width:'100%', maxWidth:'800px'}}/>
 
 <br/>
 
@@ -41,10 +41,10 @@ You can configure your kanban board to display some fields and hide others. By d
 
 You can also rearrange the order of fields by holding down the field name and dragging it to where you want it. 
 
-<ThemedImage sources={{light: "/img/user-guide/display-fields-light.png", dark:"/img/user-guide/display-fields-dark.png"}} style={{width:'100%', maxWidth:'800px'}}/>
+<img src="/images/user-guide/display-fields-light.png" style={{width:'100%', maxWidth:'800px'}}/>
 
 <br/>
 
 You can also hide all the fields, and get an overview of all the opportunities at a glance. To do so, click on <b>Options</b> on the top right and turn on the toggle in front of the <b>Compact view</b> option. 
 
-<ThemedImage sources={{light: "/img/user-guide/compact-opportunities-view-light.png", dark:"/img/user-guide/compact-opportunities-view-dark.png"}} style={{width:'100%', maxWidth:'800px'}}/>
+<img src="/images/user-guide/compact-opportunities-view-light.png"style={{width:'100%', maxWidth:'800px'}}/>
