--- a/packages/twenty-website/src/content/user-guide/basics/tasks.mdx
+++ b/packages/twenty-website/src/content/user-guide/basics/tasks.mdx
@@ -5,11 +5,11 @@ sidebar_custom_props:
   icon: TbChecklist
 ---
 
-import ThemedImage from '@theme/ThemedImage';
+import PostImage from '../../../components/PostImage'
 
 You can find all the tasks from across your workspace in the <b>Tasks</b> window in your sidebar. You can also find a dedicated tab for Tasks on each record so you can add and edit tasks directly from each record. Alternatively, you can click on the `+` button on the top right of each record page and then click on <b>Task</b> to create a new task. 
 
-<ThemedImage sources={{light: "/img/user-guide/create-new-task-light.png", dark:"/img/user-guide/create-new-task-dark.png"}} style={{width:'100%', maxWidth:'800px'}}/>
+<img src="/images/user-guide/create-new-task-light.png" style={{width:'100%', maxWidth:'800px'}}/>
 
 ## Tasks page
 
