--- a/packages/twenty-website/src/content/user-guide/basics/basics.mdx
+++ b/packages/twenty-website/src/content/user-guide/basics/basics.mdx
@@ -1,5 +1,5 @@
 ---
-title: User Guide
+title: Get started
 displayed_sidebar: userSidebar
 sidebar_class_name: hidden
 sidebar_position: 0
@@ -8,7 +8,6 @@ sidebar_custom_props:
   isSidebarRoot: true
 ---
 
-import ThemedImage from '@theme/ThemedImage';
 
 # Welcome to Twenty's User Guide
 
@@ -46,13 +45,13 @@ There are multiple ways to create notes and tasks. Learn more about [Notes](./ba
 
 You can also upload and attach files for each record. To do so, expand a record, and head over to the <b>Files</b> tab. You'll then see the `+ Add file` button. 
 
-<ThemedImage sources={{light: "../img/user-guide/attach-files-to-records-light.png", dark:"../img/user-guide/attach-files-to-records-dark.png"}} style={{width:'100%', maxWidth:'800px'}}/>
+<img src="/images/user-guide/attach-files-to-records-light.png" style={{width:'100%', maxWidth:'800px'}}/>
 
 ## Add Records To Favorites
 
 You can add records to your favorites for quick access. To do so, expand the record you want to add, and click on the heart icon on the top right. You'll now be able to see your favorite records in your sidebar right above your workspace. 
 
-<ThemedImage sources={{light: "../img/user-guide/view-favorite-records-light.png", dark:"../img/user-guide/view-favorite-records-dark.png"}} style={{width:'100%', maxWidth:'800px'}}/>
+<img src="/images/user-guide/view-favorite-records-light.png" style={{width:'100%', maxWidth:'800px'}}/>
 
 ## Import data
 
